<resources>
    <string name="app_name">PermissionManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="people">people</string>
    <string name="back">back</string>
    <string name="info">info</string>
    <string name="permission">Permission</string>
    <string name="email">Email</string>
    <string name="continue_btn">Continue</string>
    <string name="profile_text">We use this info to tailor categorization and suggest \nsmart rules based on your work.</string>
    <string name="drop_down_1">What are you hoping to achieve?</string>
    <string name="drop_down_2">Who are you, how do you work?</string>
    <string name="drop_down_3">What sector do you primarily operate in?</string>
    <string name="email_text">Connect to your email to unlock automatic receipt and invoice detection. No more forwarding or manual uploads.</string>
    <string name="gmail_text">Connect Google \nWorkspace (Gmail)</string>
    <string name="outlook_text">Connect Microsoft \n365 (Outlook)</string>
    <string name="mail_calendar">Mail + Calendar</string>
    <string name="gmail">Gmail</string>
    <string name="email_bottom_text">We\'ll only scan for receipts-not your personal emails. \nYour credentials are never shared with us.</string>
    <string name="add">add</string>
    <string name="lock">lock</string>
    <string name="permission_text">Enable access to automate receipt capture and \nmileage tracking. No manual uploads.</string>
    <string name="camera_text">To instantly scan paper receipts \nwithout manual uploads</string>
    <string name="camera">Camera</string>
    <string name="message">Messages</string>
    <string name="photo">Photos</string>
    <string name="location">Location</string>
    <string name="sms">SMS</string>
    <string name="settings_error">Could not open settings</string>
    <string name="storage">Storage</string>
    <string name="permission_bottom_text">You\'ll now see system permission popups. Please allow access to keep things automatic and organized from day one.</string>
    <string name="photo_text">To detect and organize receipts \nalready saved in your phone\'s \ngallery</string>
    <string name="message_text">To auto-detect receipts and \nconfirmations sent via text-no \nsearching required</string>
    <string name="location_text">To log where transactions happen \nand auto-tag trips or visits</string>
    <string name="status">Status</string>
    <string name="denied">Denied</string>
    <string name="granted">granted</string>
    <string name="btn_clicked">Button Clicked</string>

<!-- Drop down text -->
    <string-array name="achieve_options">
        <item>Separate personal and business</item>
        <item>Career Growth</item>
        <item>Manage finances better</item>
    </string-array>

    <string-array name="who_options">
        <item>Freelancer / Independent Contractor</item>
        <item>Full - Time</item>
        <item>Part - Time Employee</item>
    </string-array>

    <string-array name="sector_options">
        <item>Real Estate (Agents, Property Management)</item>
        <item>IT &amp; Software</item>
        <item>Healthcare</item>
    </string-array>


    <!--Alert box text-->
    <string name="dialog_permission_title">Permission Required!</string>
    <string name="dialog_permission_message">%1$s permission is needed for this app to function properly. Would you like to grant it?</string>
    <string name="dialog_permission_grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_disable_permission_title">Disable %1$s Permission</string>
    <string name="dialog_disable_permission_message">To disable this permission, you need to go to App Settings. Would you like to open settings now?</string>
    <string name="dialog_open_settings">Open Settings</string>


</resources>